--- a/flappybird/export_presets.cfg
+++ b/flappybird/export_presets.cfg
@@ -9,7 +9,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="./PajaroVolador.apk"
+export_path="../../../../Desktop/juego/juegoapk/PajaroVolador.apk"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
@@ -220,7 +220,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../../../../Desktop/PajaroVolador.exe"
+export_path="../../../../Desktop/juego/juegowindows/PajaroVolador.exe"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
